Minor classic theme tweakage.
Monotone-Parent: 4e2798267c2cff1d61447c4e6a0333a3be2c33db
Monotone-Revision: c19bc03a6378879ca411a056e0cd109c4cd4e45f

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-03T15:00:15
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -147,6 +147,9 @@ div.configure {
 /*     background: #eeffee;*/
 }
 
+div.configure table {
+}
+
 div.messages {
      padding: 10px;
      background: #fafaff;
