More classic manoeuvres
Monotone-Parent: f802082083fe353660f8dd496ee8adc88857b01f
Monotone-Revision: 632a2050e2d284058acbd9915e5b6ef00d763273

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-08-03T19:09:21
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/ieshim.css
+++ b/installer/resources/themes/console/classic/ieshim.css
@@ -14,7 +14,7 @@ div.configure {
      text-align: center;
 }
 
-div.configure p {
+div.configure p, div.configure table  {
      text-align: justify;
 }
 
@@ -129,4 +129,18 @@ div.warning {
 
 .langbox {
      margin: 22px -20px 0px 5px;
+}
+
+td {
+     text-align: left;
+}
+
+th {
+     text-align: left;
+     padding-left: 3px; 
+     padding-right: 1px;
+}
+
+div.configure hr{
+     margin: 10px 0 15px 0;
 }
