--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -107,19 +107,30 @@ div.routersummary {
      font-size: 9pt;
      word-wrap: break-word;
      font: 9pt/125%;
+     -moz-box-shadow: inset 0px 0px 0px 1px #99f;
 }
 
 div.routersummary hr {
      color: #bbf;
      background: #bbf;
-     height: 5px;
-     border: 0px solid #bbf;
-     margin: 4px 0;
+     height: 2px;
+     border-bottom: 1px inset #bbf;
+     margin: 5px 1px 4px 1px;
+     -moz-box-shadow: inset 0px -1px 0px 1px #99f;
 }
 
 div.routersummary p {
      padding: 0;
 }     
+
+div.routersummary a:link, div.routersummary a:visited {
+     text-shadow: 0px 0px 1px rgba(0, 0, 32, 0.3);
+}
+
+div.routersummary a:hover {
+     text-shadow: 0px 0px 1px rgba(255, 96, 0, 0.7);
+     color: #f60;
+}
 
 div.warning {
      margin: 20px 20px 10px 260px;
@@ -160,6 +171,7 @@ div.main {
      text-align: left;
      color: #001;
      min-width: 570px;
+     -moz-box-shadow: inset 0px 0px 0px 1px #99f;
 }
 
 div.main li {
@@ -171,8 +183,8 @@ div.main li:first-child {
 }
 
 div.main textarea {
-     width: 100% !important; 
-
+     width: 98% !important; 
+     margin: 2px 0 2px 5px;
 }
 
 div.news {
@@ -186,6 +198,7 @@ div.news {
      padding-bottom: 8px;
      padding-left: 10px;
      padding-right: 10px;
+     -moz-box-shadow: inset 0px 0px 0px 1px #99f;
 }
 
 /* convert the list entry to our title */
@@ -196,17 +209,18 @@ div.news li {
      margin: -15px 15px -20px -20px;
      padding: 0px 0 15px 0;
      border-bottom: 2px solid #cc7;
-     border-top: 2px solid #cc7;     
+     border-top: 0px solid #cc7;     
      padding: 3px 5px 5px 5px;
      font-size: 12pt;
-     color: #661;
+     color: #540;
 }
 
 div.news p {
      color: #330;
 }
 div.news a:link {
-     color: #883;
+     color: #773;
+     text-shadow: 0px 0px 1px rgba(128, 128, 48, 0.3);
 }
 
 div.news hr {
@@ -231,18 +245,20 @@ div.configure {
 }
 
 div.configure table {
+     font-size: 9pt;
+     font-weight: bold;
 }
 
 div.messages {
      padding: 10px;
-     background: #fafaff;
-     border: 5px solid #fdd;
+     background: #fff;
+     border: 5px solid #feb;
      border-right: 0;
      margin: 0px -15px 0px -20px;
      text-align: center;
      font-size: 9pt;
      font-weight: bold;
-     color: #444455;
+     color: #474;
 }
 
 div.messages span.error {
@@ -255,15 +271,17 @@ div.messages span.notice {
 
 h1 {
      font-size: 18pt;
+     text-shadow: 0px 0px 1px rgba(0, 0, 32, 0.7);
      text-align: center;
      border: 5px solid #bbf;
      padding: 13px 10px 12px 10px;
-     margin: 0 0px 0 175px;
+     margin: 0 0px 0 195px;
      line-height: 93%;
      text-transform: uppercase;
      letter-spacing: 0.3em;
      background: #fff;
      min-width: 600px;
+     -moz-box-shadow: inset 0px 0px 0px 1px #99f;
 }
 
 h2 {
@@ -349,6 +367,10 @@ input {
      vertical-align: middle;
 }
 
+input[type=text] {
+     margin: 3px 5px 3px 5px;
+     vertical-align: middle;
+}
 select {
      margin: 3px 5px 3px 5px;
      vertical-align: middle;
@@ -357,6 +379,7 @@ select {
 submit {
      margin: 3px 5px 3px 5px;
      padding 2px 0;
+     font: 8pt/140% "Lucida Sans Unicode", "Bitstream Vera Sans", Verdana, Tahoma, Helvetica, sans-serif;
 }
 
 p {
@@ -434,4 +457,46 @@ tt {
 .tidylist {
      text-align: justify;
      padding-right: 30px;
+}
+
+div.graphspanel {
+     padding: 20px 10px;
+     margin: -20px;
+     background: #ddf url('images/lightbluetile.png');
+     -moz-border-radius: 4px;
+     -khtml-border-radius: 4px;
+     border-radius: 4px;
+     border: 5px solid #bbf;
+     -moz-box-shadow: inset 0px 0px 1px 0px #002;
+     text-align: center !important;   
+}
+
+div.graphspanel img {
+     border: 1px solid #003;
+     padding: 2px;
+     margin: 6px;
+     background: #001;
+     -moz-box-shadow: inset 0px 0px 1px 1px #99f;
+}
+
+div.graphspanel img:hover {
+     border: 1px solid #003;
+     padding: 2px;
+     margin: 6px;
+     text-align: center !important;
+     background: #001;
+     -moz-box-shadow: inset 0px 0px 2px 1px #f60;
+}
+
+div.graphspanel hr {
+     margin: 20px 0;
+}
+
+div.graphspanel form {
+     text-align: left;
+     margin: 0 20px;
+}
+
+div.graphspanel h3 {
+     text-align: left;
 }
